# climatology

./: .gitignore  .gitmodules  .nojekyll  CLAUDE.md  README.md  index.html  search.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.devcontainer/book/: Dockerfile  devcontainer.json  post-create.sh
.devcontainer/common/: install-go.sh  install-nvim.sh  install-quarto.sh  post-create.sh  setup-oh-my-zsh.sh
.devcontainer/ml/: Dockerfile  devcontainer.json
.devcontainer/sim/: Dockerfile  devcontainer.json  (+2 more)
01-vector-calculus/: change-of-variables.html  index.html  integrals.html  operators.html  spherical.html  theorems.html
02-harmonic-analysis/: fourier-series.html  fourier-transform.html  function-spaces.html  index.html  spherical-harmonics.html
03-pdes/: index.html
04-geophysical-fluid-dynamics/: index.html  motion.html  rotating.html  vorticity.html
05-neural-operators/: index.html
ai-summaries/: CLAUDE.md  turbulence-closure-with-local-nn.md
ai4pde/: CLAUDE.md  presentation.md  presentation.tex  render.sh
analysis/: README.md  pyproject.toml
analysis/notebooks/: other_visualizations.ipynb
analysis/src/analysis/cmd/: rotating_globe.py
book/: CLAUDE.md  README.md  _quarto.yml  index.qmd  references.bib
docs/: barotropic-diagnostics.md  barotropic-namelist.md  isca-barotropic-stirring.md  mpi-cheatsheet.md  ncdump-cheatsheet.md  s3-atmos-cheatsheet.md  spectral-truncation.md
heat-simulation/: pyproject.toml
heat-simulation/docs/: getting-started.md
heat-simulation/notebooks/: heat_equation_2d.ipynb
heat-simulation/src/heat_simulation/: main.py
notebooks/: barotropic_visualization-issues.md  barotropic_visualization.ipynb  barotropic_visualization.py  nc_processing_example.ipynb  requirements.vis.txt  rotating_globe.py
sim/: example_barotropic_stirring.py
(+23 files in other folders)
