[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analysis"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.25",
    "dask",
    "h5py",
    "matplotlib",
    "netCDF4",
    "numpy",
    "pandas",
    "tqdm",
    "xarray",
]

[project.optional-dependencies]
notebook = [
    "ipykernel",
    "ipython",
]

[tool.hatch.build.targets.wheel]
packages = ["src/analysis"]
