[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analysis"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.25",
    "dask",
    "h5py",
    "matplotlib",
    "netCDF4",
    "numpy",
    "pandas",
    "tqdm",
    "xarray",
]

[project.optional-dependencies]
notebook = [
    "ipykernel",
    "ipython",
]

[dependency-groups]
dev = [
    "black",
    "pylint",
    "pytest",
]

[tool.pylint.messages_control]
disable = [
    "missing-function-docstring",
    "missing-class-docstring",
    "missing-module-docstring",
    "too-many-locals",
]

[tool.hatch.build.targets.wheel]
packages = ["src/analysis"]
