[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heat-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "matplotlib>=3.10.0",
    "tqdm>=4.67.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pylint>=4.0.2",
    "pytest>=8.4.2",
    "jupyter>=1.1.1",
]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
]
